<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/itSale"
        android:title="@string/sales"
        app:showAsAction="ifRoom"
        android:icon="@drawable/sales"/>
    <item
        android:id="@+id/itBlance"
        android:title="@string/balance"
        android:icon="@drawable/balance"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/itPOV"
        android:title="@string/counter"
        android:icon="@drawable/point_of_sale"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/itCategory"
        android:title="@string/category"
        android:icon="@drawable/category"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/itItem"
        android:title="@string/item"
        android:icon="@drawable/item_view"
        app:showAsAction="ifRoom"/>
</menu>
