<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cartcardLayout"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:elevation="4dp"
        android:padding="8dp"
        android:radius="16dp"> <!-- Added corner radius here -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/emeraldGreen">

            <!-- Quantity Controls and Delete Button Container -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal"
                android:layout_marginBottom="8dp">

                <!-- Quantity Controls -->
                <LinearLayout
                    android:id="@+id/linearLayoutQuantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp">

                    <Button
                        android:id="@+id/buttonDecrease"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:text="@string/minus"
                        android:background="@drawable/card_button_background"
                        android:textColor="@android:color/white"
                        android:layout_marginRight="2dp"/>

                    <EditText
                        android:id="@+id/textViewQuantity"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:gravity="center"
                        android:text="@string/_1"
                        android:textSize="16sp"
                        android:inputType="number"
                        android:maxLength="3"
                        android:background="@color/smokeyWhite"
                        android:textColor="@color/black" />

                    <Button
                        android:id="@+id/buttonIncrease"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:background="@drawable/pluse_minus_buttonbackground"
                        android:text="@string/pluse"
                        android:layout_marginLeft="2dp"
                        android:textColor="@color/smokeyWhite" />
                </LinearLayout>

                <!-- Delete Button -->
                <ImageButton
                    android:id="@+id/buttonDelete"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:background="@drawable/card_button_background"
                    android:src="@drawable/ic_delete"
                    android:contentDescription="@string/delete_item"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp" />
            </LinearLayout>

            <!-- Product Name -->
            <TextView
                android:id="@+id/textViewProductName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/product_name"
                android:textSize="24sp"
                android:background="@color/emeraldGreen"
                android:textColor="@color/smokeyWhite" />

            <!-- Product Price -->
            <TextView
                android:id="@+id/textViewProductPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_below="@id/textViewProductName"
                android:layout_marginTop="5dp"
                android:text="@string/price_0_00"
                android:textSize="20sp"
                android:background="@color/emeraldGreen"
                android:textColor="@color/smokeyWhite" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>
