<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_category_frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayBackground"
    tools:context=".Fragments.add_category">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_margin="8dp"
        android:layout_marginTop="15dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/categoryImage"
                android:layout_width="127dp"
                android:layout_height="117dp"
                android:layout_marginTop="16dp"


                android:background="@drawable/image_border"

                android:clickable="true"
                android:padding="15dp"
                android:src="@drawable/baseline_add_a_photo_24"


                app:layout_constraintBottom_toTopOf="@+id/editTextCategory"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />


            <EditText
                android:id="@+id/editTextCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dim_32"

                android:layout_marginEnd="@dimen/dim_32"
                android:background="@drawable/edit_text_background"
                android:elevation="4dp"
                android:hint="@string/enter_category_name"
                android:padding="16dp"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.86" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


    <!--  -->


    <Button
        android:id="@+id/buttonAddCategory"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_65"
        android:background="@drawable/button_background"
        android:elevation="4dp"
        android:paddingStart="24dp"
        android:paddingTop="12dp"
        android:paddingEnd="24dp"
        android:paddingBottom="12dp"
        android:text="@string/add"
        android:textColor="@android:color/white"
        android:textSize="@dimen/dim_30"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonUpdateCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:elevation="4dp"
        android:paddingStart="24dp"
        android:paddingTop="12dp"
        android:paddingEnd="24dp"
        android:paddingBottom="12dp"
        android:text="@string/update"
        android:textColor="@android:color/white"
        android:textSize="@dimen/dim_30"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonAddCategory"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
